--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@
 .ant-collapse-header-text{
   color: white;
 }
+
+.ant-collapse-item-active{
+  background-color: white;
+}
 .ant-drawer-body{
   padding: 0 !important;
 }
